refactor: Improve error handling and comments in prog-scheme.ipynb

--- a/src/prog-scheme/prog-scheme.ipynb
+++ b/src/prog-scheme/prog-scheme.ipynb
@@ -231,6 +231,8 @@
     "\n",
     "log = RankedLogger()\n",
     "\n",
+    "# TODO: realistic한가?\n",
+    "\n",
     "\n",
     "@torch.no_grad()\n",
     "def program_weights_gpc(\n",
@@ -287,6 +289,7 @@
     "\n",
     "    for _ in range(max_iter):\n",
     "        y = self.tile.forward(x_values, False)\n",
+    "        # TODO: error와 weight 2norm 사이 관계 분석\n",
     "        error = y - target_values\n",
     "        err_normalized = error.abs().mean().item() / target_max\n",
     "        log.debug(f\"Error: {err_normalized}\")\n",
@@ -333,7 +336,7 @@
     "\n",
     "    lr_save = self.tile.get_learning_rate()  # type: ignore\n",
     "    self.tile.set_learning_rate(1)  # type: ignore\n",
-    "    U, S, Vh = torch.linalg.svd(target_weights)\n",
+    "    U, S, Vh = torch.linalg.svd(target_weights - self.tile.get_weights())\n",
     "    # compute numerical rank from S given rtol, atol\n",
     "    num_rank = torch.sum(S > torch.max(rank_atol, S * rank_rtol))\n",
     "    if svd_once:\n",
@@ -343,7 +346,7 @@
     "            self.tile.update(u1, v1, False)\n",
     "            if (\n",
     "                tolerance is not None\n",
-    "                and torch.norm(self.tile.get_weights() - target_weights) < tolerance\n",
+    "                and torch.norm(self.get_weights(realistic=True) - target_weights) < tolerance\n",
     "            ):\n",
     "                break\n",
     "    else:\n",
@@ -351,13 +354,11 @@
     "            u1 = U[0] * torch.sqrt(S[0])\n",
     "            v1 = Vh[0] * torch.sqrt(S[0])\n",
     "            self.tile.update(u1, v1, False)\n",
-    "            if (\n",
-    "                tolerance is not None\n",
-    "                and torch.norm(self.tile.get_weights() - target_weights) < tolerance\n",
-    "            ):\n",
+    "            diff = target_weights - self.get_weights(realistic=True)\n",
+    "            if tolerance is not None and torch.norm(diff) < tolerance:\n",
     "                break\n",
     "            else:\n",
-    "                U, S, Vh = torch.linalg.svd(self.get_weights(realistic=True))\n",
+    "                U, S, Vh = torch.linalg.svd(diff)\n",
     "\n",
     "    self.tile.set_learning_rate(lr_save)  # type: ignore"
    ]
