feat: Simplify svd method & Add default AnalogTile program exp. in prog-scheme.ipynb

--- a/src/prog-scheme/prog-scheme.ipynb
+++ b/src/prog-scheme/prog-scheme.ipynb
@@ -4,62 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intro"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from aihwkit.nn import AnalogLinear\n",
-    "from aihwkit.optim import AnalogSGD\n",
-    "from aihwkit.simulator.configs import SingleRPUConfig\n",
-    "from aihwkit.simulator.configs.devices import ConstantStepDevice, DriftParameter\n",
-    "from aihwkit.simulator.configs.utils import InputRangeParameter, PrePostProcessingParameter\n",
-    "from aihwkit.simulator.tiles.analog import AnalogTile, AnalogTileWithoutPeriphery\n",
-    "\n",
-    "input_size = 64\n",
-    "output_size = 10\n",
-    "pre_post = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
-    "device = ConstantStepDevice(diffusion=0, drift=DriftParameter())\n",
-    "rpuconfig = SingleRPUConfig(device=device, pre_post=pre_post)\n",
-    "print(rpuconfig)\n",
-    "tile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "only `AnalogTile` which inherits `TileWithPeriphery` class has `program_weights` method\n",
-    "\n",
-    "`program_weights` method implements \"Gradient descent-based programming of analog in-memory computing cores\" by default\n",
-    "\n",
-    "`set_weights` method is used to set the weights of the analog tile to the given values\\\n",
-    "`program_weights` method is internally called by `set_weights` method to program the weights of the analog tile\\\n",
-    "\n",
-    "`get_weights` method is used to get the weights of the analog tile\\\n",
-    "`read_weights` method is used to read the weights of the analog tile with read noise"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t, _ = tile.get_weights(realistic=False)\n",
-    "t2, _ = tile.read_weights()\n",
-    "torch.allclose(t, t2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Custom Tiles"
    ]
   },
@@ -76,9 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
     "from aihwkit.simulator.tiles.custom import CustomSimulatorTile\n",
-    "\n",
-    "# from aihwkit.simulator.tiles.periphery import TileWithPeriphery\n",
     "from torch import Tensor\n",
     "\n",
     "# TODO: 아래 메서드들 구현 필요\n",
@@ -185,7 +128,8 @@
     "        out_trans: bool = False,\n",
     "    ):\n",
     "        super().__init__(out_size, in_size, rpu_config, bias, in_trans, out_trans)\n",
-    "        self.program_weights = rpu_config.program_weights\n",
+    "        # dynamically add the program_weights method\n",
+    "        self.program_weights = rpu_config.program_weights.__get__(self, MyCustomTile)\n",
     "\n",
     "\n",
     "# TODO: dataclass에 직접 program_weights 메서드 붙여넣기?\n",
@@ -240,7 +184,7 @@
     "    from_reference: bool = True,\n",
     "    x_values: Optional[Tensor] = None,\n",
     "    learning_rate: float = 0.1,\n",
-    "    max_iter: int = 10000,\n",
+    "    max_iter: int = 100,\n",
     "    tolerance: Optional[float] = 0.01,\n",
     "    w_init: Union[float, Tensor] = 0.01,\n",
     ") -> None:\n",
@@ -304,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Proposed method"
+    "### Proposed method(SVD)"
    ]
   },
   {
@@ -313,6 +257,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def compensate_half_selection(v: Tensor) -> Tensor:\n",
+    "    \"\"\"Compensate the half-selection effect for a vector.\n",
+    "\n",
+    "    Args:\n",
+    "        v: Vector to compensate.\n",
+    "\n",
+    "    Returns:\n",
+    "        Compensated vector.\n",
+    "    \"\"\"\n",
+    "    pass\n",
+    "\n",
+    "\n",
     "@torch.no_grad()\n",
     "def program_weights_svd(\n",
     "    self,\n",
@@ -325,6 +281,22 @@
     "    svd_once: bool = False,\n",
     "    **kwargs: Any,\n",
     ") -> None:\n",
+    "    \"\"\"\n",
+    "    Perform singular value decomposition (SVD) based weight programming.\n",
+    "\n",
+    "    Args:\n",
+    "        from_reference (bool, optional): Flag indicating whether to use reference combined weights. Defaults to True.\n",
+    "        max_iter (int, optional): Maximum number of iterations. Defaults to 100.\n",
+    "        tolerance (float, optional): Tolerance for convergence. Defaults to 0.01.\n",
+    "        w_init (Union[float, Tensor], optional): Initial value for weights. Defaults to 0.01.\n",
+    "        rank_atol (float, optional): Absolute tolerance for numerical rank computation. Defaults to 1e-6.\n",
+    "        rank_rtol (float, optional): Relative tolerance for numerical rank computation. Defaults to 1e-6.\n",
+    "        svd_once (bool, optional): Flag indicating whether to perform SVD only once. Defaults to False.\n",
+    "        **kwargs: Additional keyword arguments.\n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
+    "\n",
     "    if not from_reference or self.reference_combined_weights is None:\n",
     "        self.reference_combined_weights = self.tile.get_weights()\n",
     "        target_weights = self.reference_combined_weights\n",
@@ -339,26 +311,24 @@
     "    U, S, Vh = torch.linalg.svd(target_weights - self.tile.get_weights())\n",
     "    # compute numerical rank from S given rtol, atol\n",
     "    num_rank = torch.sum(S > torch.max(rank_atol, S * rank_rtol))\n",
-    "    if svd_once:\n",
-    "        for idx in range(min(num_rank, max_iter)):\n",
-    "            u1 = U[idx] * torch.sqrt(S[idx])\n",
-    "            v1 = Vh[idx] * torch.sqrt(S[idx])\n",
-    "            self.tile.update(u1, v1, False)\n",
-    "            if (\n",
-    "                tolerance is not None\n",
-    "                and torch.norm(self.get_weights(realistic=True) - target_weights) < tolerance\n",
-    "            ):\n",
-    "                break\n",
-    "    else:\n",
-    "        for _ in range(min(num_rank, max_iter)):\n",
-    "            u1 = U[0] * torch.sqrt(S[0])\n",
-    "            v1 = Vh[0] * torch.sqrt(S[0])\n",
-    "            self.tile.update(u1, v1, False)\n",
-    "            diff = target_weights - self.get_weights(realistic=True)\n",
-    "            if tolerance is not None and torch.norm(diff) < tolerance:\n",
-    "                break\n",
-    "            else:\n",
-    "                U, S, Vh = torch.linalg.svd(diff)\n",
+    "    assert num_rank == torch.linalg.matrix_rank(\n",
+    "        target_weights - self.tile.get_weights(), rank_atol, rank_rtol\n",
+    "    )\n",
+    "    i = 0\n",
+    "    for _ in range(min(num_rank, max_iter)):\n",
+    "        u1 = U[i] * torch.sqrt(S[i])\n",
+    "        v1 = Vh[i] * torch.sqrt(S[i])\n",
+    "        u1, v1 = compensate_half_selection(u1), compensate_half_selection(v1)\n",
+    "        self.tile.update(u1, v1, False)\n",
+    "        diff = target_weights - self.get_weights(realistic=True)\n",
+    "        l2_norm = diff.norm()\n",
+    "        log.debug(f\"Error: {l2_norm}\")\n",
+    "        if tolerance is not None and l2_norm < tolerance:\n",
+    "            break\n",
+    "        elif svd_once:\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            U, S, Vh = torch.linalg.svd(diff)\n",
     "\n",
     "    self.tile.set_learning_rate(lr_save)  # type: ignore"
    ]
@@ -371,18 +341,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from aihwkit.simulator.tiles.custom import CustomTile\n",
-    "\n",
-    "input_size = 64\n",
-    "output_size = 10\n",
-    "\n",
-    "ctile = CustomTile(output_size, input_size)\n",
-    "ctile.program_weights = program_weights_gpc"
+    "### AnalogTile()"
    ]
   },
   {
@@ -391,11 +353,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rpu_config = RPUConfigwithProgram(program_weights=program_weights_gpc)\n",
-    "ctile = MyCustomTile(output_size, input_size, rpu_config=rpu_config)\n",
+    "from aihwkit.simulator.configs import SingleRPUConfig\n",
+    "from aihwkit.simulator.configs.devices import ConstantStepDevice, DriftParameter\n",
+    "from aihwkit.simulator.configs.utils import InputRangeParameter, PrePostProcessingParameter\n",
+    "from aihwkit.simulator.tiles.analog import AnalogTile\n",
     "\n",
-    "rpu_config2 = RPUConfigwithProgram(program_weights=program_weights_svd)\n",
-    "ctile2 = MyCustomTile(output_size, input_size, rpu_config=rpu_config2)"
+    "input_size = 6\n",
+    "output_size = 3\n",
+    "pre_post = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
+    "device = ConstantStepDevice(diffusion=0, drift=DriftParameter())\n",
+    "rpuconfig = SingleRPUConfig(device=device, pre_post=pre_post)\n",
+    "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery"
    ]
   },
   {
@@ -404,15 +372,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "atile.program_weights = program_weights_gpc.__get__(atile, AnalogTile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
     "from src.utils.logging_utils import LogCapture\n",
     "\n",
-    "with LogCapture() as logc:\n",
-    "    ctile.set_weights(realistic=True)\n",
-    "    log_list = logc.get_log_list()\n",
+    "w = torch.rand_like(atile.get_weights()[0])\n",
     "\n",
     "with LogCapture() as logc:\n",
-    "    ctile2.set_weights()\n",
-    "    log_list2 = logc.get_log_list()"
+    "    atile.set_weights(weight=w, realistic=True)\n",
+    "    log_list = logc.get_log_list()"
    ]
   },
   {
@@ -442,6 +419,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "err_list = extract_error(log_list)\n",
+    "plt.plot(err_list)\n",
+    "plt.xlabel(\"Iteration\")\n",
+    "plt.ylabel(\"Error\")\n",
+    "plt.title(\"Error vs Iteration\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GPC vs SVD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rpu_config = RPUConfigwithProgram(program_weights=program_weights_gpc)\n",
+    "ctile = MyCustomTile(output_size, input_size, rpu_config=rpu_config)\n",
+    "\n",
+    "rpu_config2 = RPUConfigwithProgram(program_weights=program_weights_svd)\n",
+    "ctile2 = MyCustomTile(output_size, input_size, rpu_config=rpu_config2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with LogCapture() as logc:\n",
+    "    ctile.set_weights(realistic=True)\n",
+    "    log_list = logc.get_log_list()\n",
+    "\n",
+    "with LogCapture() as logc:\n",
+    "    ctile2.set_weights()\n",
+    "    log_list2 = logc.get_log_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# extract error and plot\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -462,6 +490,31 @@
    "metadata": {},
    "source": [
     "# ETC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "only `AnalogTile` which inherits `TileWithPeriphery` class has `program_weights` method\n",
+    "\n",
+    "`program_weights` method implements \"Gradient descent-based programming of analog in-memory computing cores\" by default\n",
+    "\n",
+    "`set_weights` method is used to set the weights of the analog tile to the given values\\\n",
+    "`program_weights` method is internally called by `set_weights` method to program the weights of the analog tile\\\n",
+    "\n",
+    "`get_weights` method is used to get the weights of the analog tile\\\n",
+    "`read_weights` method is used to read the weights of the analog tile with read noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aihwkit.nn import AnalogLinear\n",
+    "from aihwkit.optim import AnalogSGD"
    ]
   },
   {
@@ -521,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
