feat: Add aikwkit programming error viz notebook

--- a/src/prog-scheme/prog-scheme.ipynb
+++ b/src/prog-scheme/prog-scheme.ipynb
@@ -137,14 +137,14 @@
     "class RPUConfigwithProgram(CustomRPUConfig):\n",
     "    \"\"\"Custom single RPU configuration.\"\"\"\n",
     "\n",
+    "    program_weights: Callable[[Any], None] = None\n",
+    "    \"\"\"Method to program the weights.\"\"\"\n",
+    "\n",
     "    tile_class: Type = MyCustomTile\n",
     "    \"\"\"Tile class that corresponds to this RPUConfig.\"\"\"\n",
     "\n",
     "    simulator_tile_class: Type = HalfSelectedSimulatorTile\n",
-    "    \"\"\"Simulator tile class implementing the analog forward / backward / update.\"\"\"\n",
-    "\n",
-    "    program_weights: Callable[[Any], None]\n",
-    "    \"\"\"Method to program the weights.\"\"\""
+    "    \"\"\"Simulator tile class implementing the analog forward / backward / update.\"\"\""
    ]
   },
   {
@@ -363,7 +363,8 @@
     "pre_post = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
     "device = ConstantStepDevice(diffusion=0, drift=DriftParameter())\n",
     "rpuconfig = SingleRPUConfig(device=device, pre_post=pre_post)\n",
-    "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery"
+    "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery\n",
+    "print(rpuconfig)"
    ]
   },
   {
@@ -373,6 +374,23 @@
    "outputs": [],
    "source": [
     "atile.program_weights = program_weights_gpc.__get__(atile, AnalogTile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "from src.utils.logging_utils import LogCapture\n",
+    "\n",
+    "w = torch.rand_like(atile.get_weights()[0])\n",
+    "\n",
+    "with LogCapture() as logc:\n",
+    "    atile.set_weights(weight=w, realistic=True)\n",
+    "    log_list = logc.get_log_list()"
    ]
   },
   {
@@ -447,6 +465,15 @@
     "\n",
     "rpu_config2 = RPUConfigwithProgram(program_weights=program_weights_svd)\n",
     "ctile2 = MyCustomTile(output_size, input_size, rpu_config=rpu_config2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(rpu_config)"
    ]
   },
   {
